update icons and fix spacing in about page

--- a/src/components/AboutContent/styles.module.scss
+++ b/src/components/AboutContent/styles.module.scss
@@ -13,11 +13,11 @@ $breakpoints: (
 );
 
 .container {
-  padding: 2rem 22rem;
+  padding: 4rem 22rem;
   display: grid;
   grid-template-columns: 1fr minmax(auto, 1024px) 1fr;
   padding: 5,6rem 0 6.8rem;
-  margin-bottom: 4rem;
+  margin: 3rem 0;
 }
 
 .subtitle {
@@ -34,7 +34,7 @@ $breakpoints: (
   font-size: 2.6rem;
   line-height: 3.4rem;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 .content {
