--- a/src/components/AboutStory/styles.module.scss
+++ b/src/components/AboutStory/styles.module.scss
@@ -14,10 +14,9 @@ $breakpoints: (
 
 .container {
   background-color: #f9f9fb;
-  padding: 3rem 22rem;
+  padding: 5rem 22rem 6rem;
   display: grid;
   grid-template-columns: 1fr minmax(auto, 1024px) 1fr;
-  padding: 5,6rem 0 6.8rem;
 }
 
 .subtitle {
